<package format="2">
  <name>bullet_world_wrapper</name>
  <version>0.0.0</version>
  <description>The bullet_world_wrapper package</description>
  <author>Atrhur Niedzwiecki</author>
  <maintainer email="arthur@todo.todo">arthur</maintainer>
  <license>TODO</license>

  <url type="website">http://cram-system.org</url>
  <url type="repository">http://github.com/cram2/cram_projection_demos</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_executive</depend>
  <depend>cram_pr2_projection</depend>
  
  <exec_depend>iai_maps</exec_depend>
  <exec_depend>iai_kitchen</exec_depend>
  <exec_depend>robot_state_chain_publisher</exec_depend>
  <exec_depend>json_prolog</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>pr2_arm_kinematics</exec_depend>
  
</package>
