<package format="2">
  <name>cram_bullet_world_tutorial</name>
  <version>0.0.1</version>
  <description>Tutorial code for the bullet world.</description>
  <author>Arthur Niedzwiecki</author>
  <maintainer email="niedzwiecki@uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>BSD</license>

  <url type="website">http://cram-system.org</url>
  <url type="repository">http://github.com/cram2/cram_projection_demos</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_pr2_projection</depend>
  <depend>cram_executive</depend>

  <!-- launch file -->
  <exec_depend>iai_maps</exec_depend>
  <exec_depend>iai_kitchen</exec_depend>
  <exec_depend>robot_state_chain_publisher</exec_depend>
  <exec_depend>json_prolog</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>pr2_arm_kinematics</exec_depend>
</package>
